--- a/src/API/E_Wallet.WebApi/appsettings.json
+++ b/src/API/E_Wallet.WebApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Server=(localdb)\\mssqllocaldb;Database=wallet_db;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "UserSecretKey": "WLUEWeL3so2hdHhHM5ZYnvzsOUBzSGH4+T3EgrQ91KI="
 }
