Some notes added

--- a/src/API/E_Wallet.WebApi/appsettings.json
+++ b/src/API/E_Wallet.WebApi/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "DbConnection": "Server=(localdb)\\mssqllocaldb;Database=wallet_db;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  //must be stored in a safe place (DB or secret.json file)
   "UserSecretKey": "WLUEWeL3so2hdHhHM5ZYnvzsOUBzSGH4+T3EgrQ91KI="
 }
